--- a/index.html
+++ b/index.html
@@ -39,35 +39,135 @@
   </body>
 </html>
 
-<section class="nosamis">
+<!-------------------- COLLECTION -------------------->
+
+<section class="collection">
   <div class="title">
-  <h3>
-    Nos amis
-  </h3>
+    <h3>
+      Nos amis
+    </h3>
+  </div>
+
+  <div class="collection-items">
+
+    <div class="collection-item">
+      <img src="/img/chiot5.jpg" alt="" />
+      <div class="collection-info">
+            <h4>Les chiots</h4>
+            <a href="#">Détails</a>
+          </div>
+        </div>
+
+    <div class="collection-item">
+      <img src="/img/chien11.jpg" alt="" />
+      <div class="collection-info">
+      <h4>Les chiens</h4>
+            <a href="#">Détails</a>
+          </div>
+        </div>
+
+    <div class="collection-item">
+      <img src="/img/special3.jpg" alt="" />
+      <div class="collection-info">
+      <h4>Les spéciaux</h4>
+            <a href="#">Détails</a>
+          </div>
+        </div>
+
+  <div class="collection-item">
+    <img src="/img/hero8.jpg" alt="" />
+    <div class="collection-info">
+    <h4>Divers</h4>
+            <a href="#">Détails</a>
+          </div>
+        </div>
+
+</section>
+
+<!-------------------- PRODUCT -------------------->
+<section class="product">
+
+<div class="product-items">
+
+  <div class="product-item">
+    <div class="profile">
+      <span>Maya</span>
+      <span>2 ans</span>
+    </div>
+    <img src="/img/chien8.jpg" alt="" />
+  </div>
+
+  <div class="product-item">
+    <div class="profile">
+      <span>Niflette</span>
+      <span>4 mois</span>
+    </div>
+    <img src="/img/chiot2.jpg" alt="" />
+  </div>
+
+  <div class="product-item">
+      <div class="profile">
+        <span>Lina</span>
+        <span>2 mois</span>
+      </div>
+    <img src="/img/chiot7.jpg" alt="" />
+  </div>
+
+  <div class="product-item">
+      <div class="profile">
+        <span>César</span>
+        <span>6 ans</span>
+      </div>
+    <img src="/img/chien6.jpg" alt="" />
+  </div>
 </div>
 
-<div class="items">
-    <div class="item">
-      <img src="/img/chiot5.jpg" alt="">
-      <div>Les chiots</div>
-      <div> Détails </div>
-    </div>
+  <div class="section-bottom">
+    <button>Tout voir</button>
+  </div>
+</div>
 
-    <div class="item">
-        <img src="/img/chien7.jpg" alt="">
-        <div>Les chiens</div>
-        <div> Détails </div>
-      </div>
 
-    <div class="item">
-      <img src="/img/special1.jpg" alt="">
-          <div>Les spéciaux</div>
-          <div> Détails </div>
-    </div>
+<!----------------- PHILOSOPHY -------------------->
+<section class="philosophy">
+  <div class="box">
+    <h3>Notre raison d'être</h3>
+    <p>
+      Trouver des foyers aux chiens et chiots abandonnés!
+    </p>
+    <a href="#">Plus d'informations</a>
+    <img src="/img/hero6.jpg" alt="" />
   </div>
 </section>
-</main>
 
-<script src="./index.js"></script>
+<!----------------- NEWSLETTER -------------------->
+<section class="newsletter">
+  <span>Je m'abonne à la newsletter</span>
+  <form>
+    <input
+      type="email"
+      name="email"
+      label="Ton adresse email"
+      placeholder="you@email.com"
+    />
+    <button type="submit">
+      <i class="fas fa-chevron-right"></i>
+    </button>
+  </form>
+</section>
+
+<!------------------- FOOTER ---------------------->
+<footer>
+  <p>Vanda 2019</p>
+  <p>Made by Vanda</p>
+  <div class="social-icons">
+    <i class="fab fa-instagram"></i>
+    <i class="fab fa-twitter"></i>
+  </div>
+</footer>
 </body>
 </html>
+
+
+
+<script src="./index.js"></script>
